chore: use cds.version everywhere
Signed-off-by: Yvonnick Esnault <yvonnick.esnault@corp.ovh.com>

--- a/cli/cdsctl/Makefile
+++ b/cli/cdsctl/Makefile
@@ -1,6 +1,6 @@
 .PHONY: clean
 
-VERSION := $(if ${CDS_SEMVER},${CDS_SEMVER},snapshot)
+VERSION := $(if ${CDS_VERSION},${CDS_VERSION},snapshot)
 GITHASH := $(if ${GIT_HASH},${GIT_HASH},`git log -1 --format="%H"`)
 BUILDTIME := `date "+%m/%d/%y-%H:%M:%S"`
 
