--- a/ui/Makefile
+++ b/ui/Makefile
@@ -1,6 +1,6 @@
 UNAME := $(shell uname)
 SHA512 := $(if ifeq ${UNAME} "Darwin",shasum -a 512,sha512sum)
-VERSION := $(if ${CDS_SEMVER},${CDS_SEMVER},snapshot)
+VERSION := $(if ${CDS_VERSION},${CDS_VERSION},snapshot)
 
 clean:
 	@rm -rf dist
