feat: cdsctl admin database for cdn service
$ cdsctl admin database unlock api id-to-unlock
$ cdsctl admin database unlock cdn id-to-unlock
$ cdsctl admin database delete api id-migration-to-delete
$ cdsctl admin database delete cdn id-migration-to-delete
$ cdsctl admin database list api
$ cdsctl admin database list cdn

Signed-off-by: Yvonnick Esnault <yvonnick.esnault@corp.ovh.com>

--- a/tests/03_clictl_admin_database.yml
+++ b/tests/03_clictl_admin_database.yml
@@ -1,8 +1,12 @@
 name: Database Commands TestSuite
 testcases:
+- name: list migrations
+  steps:
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} admin database list cdn'
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} admin database list api'
 - name: delete an invalid row from gorp_migration
   steps:
-  - script: {{.cdsctl}} -f {{.cdsctl.config}} admin database list|grep '\|*_*\.sql'
-  - script: {{.cdsctl}} -f {{.cdsctl.config}} admin database delete foo
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} admin database list api|grep '\|*_*\.sql'
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} admin database delete api foo
     assertions:
     - result.code ShouldNotEqual 0
