--- a/tests/03_clictl_admin_database.yml
+++ b/tests/03_clictl_admin_database.yml
@@ -1,8 +1,17 @@
 name: Database Commands TestSuite
 testcases:
+- name: list migrations api
+  steps:
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} admin database list -h
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} admin database list api
 - name: delete an invalid row from gorp_migration
   steps:
-  - script: {{.cdsctl}} -f {{.cdsctl.config}} admin database list|grep '\|*_*\.sql'
-  - script: {{.cdsctl}} -f {{.cdsctl.config}} admin database delete foo
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} admin database list api|grep '\|*_*\.sql'
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} admin database delete api foo
     assertions:
     - result.code ShouldNotEqual 0
+- name: list migrations cdn
+  steps:
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} admin database list cdn
+    retry: 2
+    delay: 5
