--- a/tests/04_sc_workflow_template_run.yml
+++ b/tests/04_sc_workflow_template_run.yml
@@ -28,7 +28,7 @@ testcases:
     - result.code ShouldEqual 0
     - "result.systemout ShouldContainSubstring has been launched"
 
-- name: check workflow
+- name: check workflow is running
   steps:
   - script:  {{.cdsctl}} -f {{.cdsctl.config}} workflow status 04SCWORKFLOWTEMPLATERUN testtemplate 1 --format json
     retry: 20
@@ -38,11 +38,5 @@ testcases:
     - result.systemoutjson.last_execution ShouldNotBeEmpty
     - result.systemoutjson.start ShouldNotBeEmpty
     - result.systemoutjson.num ShouldContainSubstring 1
-    - result.systemoutjson.status ShouldEqual Success
+    - result.systemoutjson.status ShouldEqual Building
     - result.systemoutjson.tags ShouldContainSubstring triggered_by
-
-- name: check workflow log
-  steps:
-  - script: {{.cdsctl}} -f {{.cdsctl.config}} workflow logs download 04SCWORKFLOWTEMPLATERUN testtemplate 1 --pattern build; grep "CDS_TEMPLATE_VERSION=1" *.log
-    retry: 20
-    delay: 10
