--- a/tests/04_sc_workflow_run_notif.yml
+++ b/tests/04_sc_workflow_run_notif.yml
@@ -21,6 +21,7 @@ testcases:
   - script: "{{.cdsctl}} -f {{.cdsctl.config}} project remove --force 04SCWORKFLOWRUNNOTIF"
   - script: "{{.cdsctl}} -f {{.cdsctl.config}} group remove --force 04scworkflowrunnotif"
   - script: "{{.cdsctl}} -f {{.cdsctl.config}} project add 04SCWORKFLOWRUNNOTIF 04SCWorkflowRunNotif"
+  - script: "{{.cdsctl}} -f {{.cdsctl.config}} project variable add email_notif \"notif1@locahost.local,notif2@locahost.local\""
 
 - name: import pipeline and workflow
   steps:
@@ -69,6 +70,22 @@ testcases:
       verify: 
         from: result.bodyjson.content-decoded
         regex: logcontent:foo2
+  - type: http
+    method: GET
+    url: '{{.smtpmock.url}}/messages/notif1@locahost.local'
+    assertions:
+    - result.statuscode ShouldEqual 200
+    - result.bodyjson.__len__ ShouldEqual 1
+    retry: 10
+    delay: 3
+  - type: http
+    method: GET
+    url: '{{.smtpmock.url}}/messages/notif2@locahost.local'
+    assertions:
+    - result.statuscode ShouldEqual 200
+    - result.bodyjson.__len__ ShouldEqual 1
+    retry: 10
+    delay: 3
 
 - name: run workflow 04SCWorkflowRunNotif-WORKFLOW-EMPTY
   steps:
