feat(api): allow variable interpolation in notification recipients (#5946)

--- a/tests/fixtures/04SCWorkflowRunNotif/workflow.yml
+++ b/tests/fixtures/04SCWorkflowRunNotif/workflow.yml
@@ -13,6 +13,7 @@ notifications:
     on_success: always
     recipients:
     - notif@localhost.local
+    - "{{.cds.proj.email_notif}}"
     template:
       body: |
         title:{{.cds.project}}/{{.cds.workflow}}#{{.cds.version}} {{.cds.status}}
