feat: wip clean docker-compose

--- a/contrib/workflow-templates/demo-usage-service-postgresql/workflow.yml
+++ b/contrib/workflow-templates/demo-usage-service-postgresql/workflow.yml
@@ -1,3 +1,5 @@
 name: [[.name]]
-version: v1.0
-pipeline: demo-service-postgresql
+version: v2.0
+workflow:
+  demo-service-postgresql:
+    pipeline: demo-service-postgresql
