--- a/ui/Makefile
+++ b/ui/Makefile
@@ -8,6 +8,7 @@ clean:
 	@find semantic -name "*" -not -path "*/site/globals/site.variables" -delete
 	@rm -rf semantic\\
 	@rm -f package-lock.json
+	@rm -f ui.tar.gz
 
 NG = node_modules/@angular/cli/bin/ng
 $(NG):
