fix(plugin/artifactory): integration Artifactory has been renamed

--- a/contrib/integrations/artifactory/plugin-artifactory-build-info/plugin-artifactory-build-info.yml
+++ b/contrib/integrations/artifactory/plugin-artifactory-build-info/plugin-artifactory-build-info.yml
@@ -1,5 +1,5 @@
 name: artifactory-build-info-plugin
 type: integration-build_info
-integration: ArtifactManager
+integration: Artifactory
 author: "OVH SAS"
 description: "OVH Artifactory Build info Plugin"
