fix(contrib/plugin): artifactory plugins
Signed-off-by: francois  samin <francois.samin@corp.ovh.com>

--- a/contrib/integrations/artifactory/plugin-artifactory-promote/plugin-artifactory-promote.yml
+++ b/contrib/integrations/artifactory/plugin-artifactory-promote/plugin-artifactory-promote.yml
@@ -1,5 +1,5 @@
 name: artifactory-promote-plugin
 type: integration-promote
-integration: ArtifactManager
+integration: Artifactory
 author: "OVH SAS"
 description: "OVH Artifactory Promote Plugin"
