--- a/contrib/integrations/artifactory/plugin-artifactory-download-artifact/plugin-artifactory-download-artifact.yml
+++ b/contrib/integrations/artifactory/plugin-artifactory-download-artifact/plugin-artifactory-download-artifact.yml
@@ -1,5 +1,5 @@
 name: artifactory-download-artifact-plugin
 type: integration-download_artifact
-integration: ArtifactManager
+integration: Artifactory
 author: "OVH SAS"
 description: "OVH Artifactory Download Artifact Plugin"
