--- a/contrib/integrations/artifactory/plugin-artifactory-upload-artifact/plugin-artifactory-upload-artifact.yml
+++ b/contrib/integrations/artifactory/plugin-artifactory-upload-artifact/plugin-artifactory-upload-artifact.yml
@@ -1,5 +1,5 @@
 name: artifactory-upload-artifact-plugin
 type: integration-upload_artifact
-integration: ArtifactManager
+integration: Artifactory
 author: "OVH SAS"
 description: "OVH Artifactory Upload Artifact Plugin"
