--- a/ui/package.json
+++ b/ui/package.json
@@ -51,6 +51,7 @@
     "@ngxs/logger-plugin": "3.7.0",
     "@ngxs/store": "3.7.0",
     "@richardlt/ng2-semantic-ui": "0.10.0-alpha.6-fork-5",
+    "@sgu/ng-semantic": "1.1.16",
     "@swimlane/ngx-charts": "16.0.0",
     "@types/dagre-d3": "0.6.2",
     "@types/js-yaml": "3.12.2",
@@ -79,7 +80,7 @@
     "modernizr": "3.7.1",
     "moment": "2.24.0",
     "ng-event-source": "1.0.14",
-    "ng-semantic": "https://github.com/sguiheux/ngSemantic/tarball/sgu-master",
+    "ng-semantic": "^1.1.13",
     "ng2-codemirror-typescript": "3.0.1",
     "ng2-completer": "2.0.8",
     "ng2-dragula-sgu": "3.0.2",
