test: edit config inline
Signed-off-by: Yvonnick Esnault <yvonnick.esnault@corp.ovh.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -46,10 +46,10 @@ test-docker-compose:
 	docker-compose up --no-recreate cds-db-init && \
 	docker-compose up --no-recreate cds-migrate && \
 	docker-compose up cds-prepare && \
-	export CDS_EDIT_CONFIG="api.smtp.disable=false api.smtp.port=2023 api.smtp.host=localhost" && \
-	docker-compose up cds-edit-config && \
+	CDS_EDIT_CONFIG="api.smtp.disable=false api.smtp.port=2023 api.smtp.host=localhost " docker-compose up cds-edit-config && \
 	docker-compose up -d cds-api && \
 	echo "waiting 8s to let cds-api start.." && sleep 8 && \
+	docker ps && \
 	echo "downloading cdsctl from http://localhost:8081/download/cdsctl/$(UNAME_S)/amd64?variant=nokeychain -o cdsctl" && \
 	curl http://localhost:8081/download/cdsctl/$(UNAME_S)/amd64?variant=nokeychain -o cdsctl && \
 	chmod +x cdsctl && \
