--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,7 @@ services:
             cdn.storageUnits.storages.local.local.path=/app/cdn-storage \
             cdn.database.host=cds-db \
             cdn.publicTCP=${HOSTNAME}:8090 \
+            cdn.api.http.url=http://cds-api:8081 \
             cdn.URL=http://cds-cdn:8089 \
             hatchery.local.commonConfiguration.url=http://cds-hatchery-local:8086 \
             hatchery.local.commonConfiguration.api.http.url=http://cds-api:8081 \
